# stonefish

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile-final  Manifest.toml  Project.toml  eval_head.py  evaluate_model.py  finetune_lm.py  head.py  justfile  main.py  make_dataset.jl  mypy.ini  pyproject.toml  read_file.jl  readme.md  requirements-dev.txt  requirements.txt  rl_lm.py  rl_loop.py  run_t5_mlm_flax.py  setup.py  train.py
CGEval/: Dockerfile  parse.py  readme.md  run.sh
configs/: chess.yml  chess_class.yml  chess_convnet.yml  chess_convnet_lczero.yml  chess_resnet.yml  chess_resnet_standard.yml  chess_rl.yml  chess_rl2.yml  chess_rl2_sf.yml  chess_rlsl.yml  chess_rlsl_sf.yml  chess_self.yml  chess_selfplay.yml  chess_seq.yml  chess_seq_test.yml  chess_test.yml  common_gen.yml  dataset_huggingface.yml  dataset_lczero.yml  de-en.yml  eval_convnet_simple.yml  test_binary.yml  train_convnet_big.yml  train_convnet_bigger.yml  train_convnet_small.yml  train_resnet_big.yml  train_resnet_distributed.yml  train_resnet_small.yml  training_distributed.yml  ttt.yml  ttt_rl.yml  ttt_self.yml  ttt_selfplay.yml
data/: big_dataset.py  centipawn_estimates.py  count_log.csv  make_big_dataset.sh  pull_data.py  running_count.py  slim_dataset.py  ttt_easy_test.csv  ttt_easy_train.csv  ttt_test.csv  ttt_train.csv  upload_centipawn_dataset.py
dataset/: Manifest.toml  Project.toml  generate_ttt.py  main.jl  make_dataset.jl  parse_df.jl  parse_pgn.jl  parse_pgn.py
k8s/: benchmark.yaml  hf-secret.yaml  l4-4gpu-pool.yaml  output-pvc.yaml  shell.yaml  train.yaml  wandb-secret.yaml
scripts/: get_wandb_timing.py
stonefish/: benchmark.py  benchmark_data.py  binary_dataset.py  board_format.py  config.py  constants.py  convert.py  dataset.py  display.py  env.py  eval.py  hf_dataset.py  language.py  main.py  mask.py  model.py  policy.py  progress.py  rep.py  resnet.py  rl.py  slogging.py  tokenizers.py  tokens.py  train.py  ttt.py  types.py  utils.py  vis.py
stonefish/eval/: __init__.py  __main__.py  agent.py  agent_loader.py  base.py  move.py  prob.py  puzzle_eval.py  tensor.py  wrapper.py
stonefish/train/: __init__.py  __main__.py  base.py  generate.py  gpt.py  rl_lm.py  t5.py
test/: sample.csv  test_agent_eval.py  test_dataset.py  test_distributed_training.py  test_env.py  test_mask.py  test_model.py  test_rep.py  test_resnet.py  test_tokenizers.py  test_train_integration.py
